feature: new modes, numbering, timer events

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,9 +2,10 @@
   "title": "Kana Shuffle",
   "shuffle": "Shuffle",
   "romaji": "Romaji",
+  "numbers": "Numbers",
   "copyLink": "Copy link",
-  "shortcutsHTML": "Shortcuts: <kbd>M</kbd> romaji, <kbd>Space</kbd> timer",
-  "tip": "Tip: Use a seed for repeatable sessions, or leave it empty for “today”.",
+  "shortcutsHTML": "Shortcuts: <kbd>M</kbd> romaji, <kbd>#</kbd> numbers, <kbd>Space</kbd> timer",
+  "tip": "Tip: Set a seed for repeatable sessions, or leave it empty for “today”.",
   "settings": "Settings",
   "language": "Language",
   "kanaType": "Kana type",
@@ -12,6 +13,10 @@
   "katakana": "Katakana",
   "dakutenTitle": "Dakuten / Handakuten",
   "dakutenDesc": "Adds が / ぱ variants where applicable",
+  "timerTitle": "Timer (mm:ss)",
+  "timerReset": "Reset to 1:00",
+  "gauntletTitle": "Gauntlet Mode",
+  "gauntletDesc": "Keeps generating endless kana",
   "rowsTitle": "Rows (multi-select)",
   "rowsDesc": "Pick one or more. If none selected, it behaves like “All”.",
   "rowsAll": "All",
@@ -35,5 +40,9 @@
   "toastShuffled": "Shuffled.",
   "toastLinkCopied": "Link copied.",
   "toastClipboardBlocked": "Clipboard blocked by browser.",
-  "toastTime": "Time!"
+  "toastTime": "Time!",
+  "timesUpTitle": "Time’s up!",
+  "timesUpBody": "Nice run. Want to go again?",
+  "timesUpNext": "Start next run",
+  "timesUpClose": "Not now"
 }
